--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 .splash .left {
     position: relative;
     width: 100%;
-    height: 60vh;
+    min-height: 60vh;
 
     display: flex;
     flex: none;
@@ -21,11 +21,20 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
+.splash .right {
+    position: relative;
+
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+    flex: none;
+}
+
 .container {
     display: flex;
     flex: none;
-    align-items: center;
-    justify-content: center;
 
     width: 100%;
 }
@@ -41,19 +50,10 @@ body {
 .content {
     color: #ffffff;
     width: 100%;
-    margin-left: 6em;
-    margin-right: 10em;
-}
-
-.splash .right {
-    position: relative;
-
-    display: block;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 1;
-
-    flex: none;
+    margin-top: 8em;
+    margin-left: 3em;
+    margin-right: 3em;
+    margin-bottom: 1em;
 }
 
 .contact {
@@ -123,6 +123,21 @@ body {
         display: flex;
         flex: none;
         width: 30%;
+    }
+
+    .container {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .left .container {
+        height: 60%;
+    }
+
+    .content {
+        margin: 0;
+        margin-left: 6em;
+        margin-right: 10em;
     }
 
     .contact {
