--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,24 @@ html a:hover {
     height: auto;
 }
 
+.play-button {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+}
+
+.play-button i {
+    font-size: 400%;
+}
+
 .logo {
     width: 100%;
     height: 5em;
