Change fonts and update logo to svg

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: #e3e5e7;
+    font-family: 'Montserrat', sans-serif;
 }
 
 html a {
@@ -10,6 +11,10 @@ html a {
 
 html a:hover {
     color: #ed98af;
+}
+
+h1 {
+    font-family: 'Open Sans', sans-serif;
 }
 
 .splash {
@@ -135,7 +140,7 @@ html a:hover {
 }
 
 .play-button i {
-    font-size: 400%;
+    font-size: 600%;
 }
 
 .logo {
@@ -145,7 +150,7 @@ html a:hover {
     background-color: #ffffff;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url("../assets/logo-h.png");
+    background-image: url("../assets/logo-h.svg");
 }
 
 .submit {
@@ -213,7 +218,7 @@ textarea {
         width: 10em;
         height: 10em;
 
-        background-image: url("../assets/logo-v.png");
+        background-image: url("../assets/logo-v.svg");
     }
 }
 
